# Catch-Me-Manager

./: .gitignore  Cargo.toml  README.md  catchme.ts  catcmecreator.code-workspace  index.ts  scripts.json  server.ts  types.d.ts
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/catchme/: mod.rs
ui/: package-lock.json  package.json
ui/public/: data.json
ui/src/: App.scss  App.tsx  index.scss
ui/src/components/: route-list.tsx
ui/src/components/CatchMeMap/: CatchMeMap.scss  CatchMeMap.tsx
ui/src/components/Footer/: Footer.scss  Footer.tsx
ui/src/components/GtfsInfo/: GtfsInfo.scss  GtfsInfo.tsx
ui/src/components/Header/: Header.scss  Header.tsx
ui/src/components/Layout/: Layout.scss  Layout.tsx
ui/src/components/Map/: Map.scss  Map.tsx
ui/src/components/NoData/: NoData.scss  NoData.tsx
ui/src/components/RouteList/: RouteList.scss  RouteList.tsx
ui/src/components/RoutePage/: RoutePage.tsx
ui/src/components/RouteSelector/: RouteSelector.scss  RouteSelector.tsx
ui/src/interfaces/: index.ts
ui/src/pages/404/: 404.scss  404.tsx
ui/src/pages/Changelog/: Changelog.scss  Changelog.tsx
ui/src/pages/Create/: Create.scss  Create.tsx
ui/src/pages/Loading/: Loading.scss  Loading.tsx
ui/src/pages/RoutePage/: RoutePage.tsx
ui/src/pages/SelectData/: SelectData.scss  SelectData.tsx
ui/src/pages/UploadData/: UploadData.scss  UploadData.tsx
ui/src/providers/: catchme.provider.tsx  changelog.provider.tsx  visibleRoutes.provider.tsx
ui/src/utils/: api.ts  catchme.ts  read.ts  useFetch.ts
