[package]
name = "catchme-creator"
version = "0.2.0"
authors = ["meszarosdezso <meszarosdezsodev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
anyhow = "1.0"
rgb = "0.8"