[package]
name = "catchme-creator"
version = "0.2.0"
authors = ["meszarosdezso <meszarosdezsodev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gtfs-structures = { path = "../gtfs-structure", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
anyhow = "1.0"
rgb = "0.8"
wasm-bindgen = "0.2.68"
console_error_panic_hook = "0.1"

[dependencies.zip]
default-features = false
zip = "0.5.0"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]